# Hello_Haskell

./: .gitignore  .uuid  README.md  haskell004.hs  haskell008.hs  haskell012.hs  haskell017.hs  haskell023.hs  primitiveRoot.txt  stack.yaml
2018-02-22.hsproj/: .uuid  Main.hs  _Main.hsplay  exec20180222.cabal
2018-02-24.hsproj/: .uuid  Main.hs  _Main.hsplay  exec20180224.cabal
2018-02-25.hsproj/: .uuid  Main.hs  _Main.hsplay  exec20180225.cabal
2018-02-26.hsproj/: .uuid  Main.hs  _Main.hsplay  exec20180226.cabal
CollatzProblem.hsproj/: .uuid  CollatzProblem.cabal  Main  Main.hs  _Main.hsplay
LeibnizFormula.hsproj/: .uuid  LeibnizFormula.cabal  Main  Main.hs  _Main.hsplay
List.hsproj/: .uuid  List.cabal  Main.hs  _Main.hsplay
ODE2018-02-27.hsproj/: .uuid  Main.hs  ODE20180227.cabal  _Main.hsplay
TEST/: .gitignore  ChangeLog.md  package.yaml
Tree.hsproj/: .uuid  Tree.cabal
class.hsproj/: .uuid  Main.hs  PrimeList.hs  _Main.hsplay  class.cabal
digit.hsproj/: .uuid  Main.hs  _Main.hsplay  digit.cabal
game001/: .gitignore  ChangeLog.md  LICENSE  README.md  package.yaml  stack.yaml
innsuubunnkai.hsproj/: .uuid  Main.hs  _Main.hsplay  innsuubunnkai.cabal
mod.hsproj/: .uuid  IsPrime.hs  Main  Main.hs  Zn.hs  _Main.hsplay  _Zn.hsplay  mod.cabal
primeList/: Main.hs  Prime.hs  PrimeList.hs  data.asm
src/: haskell001.hs  haskell002.hs  haskell003.hs  haskell005.hs  haskell006.hs  haskell007.hs  haskell009.hs  haskell010.hs  haskell011.hs  haskell013.hs  haskell014.hs  haskell015.hs  haskell016.hs  haskell018.hs  haskell019.hs  haskell020.hs  test  (+4 more)
(+16 files in other folders)
